<resources>
    <string name="app_name">eChange</string>
    <string name="splash_app_name_logo">e-Change</string>
    <string name="splash_text_slogan">Seamless Checkout Experience…</string>
    <string name="resend_otp"><b><u>Resend OTP</u></b></string>

    <string name="good_afternoon">Good afternoon, Sammy</string>
    <string name="wallet_bala">Wallet balance</string>
    <string name="some_id">5000</string>
    <string name="fund_wallet">Fund wallet</string>
    <string name="request_cas">Request Cash</string>
    <string name="buy_airtime">Buy Airtime</string>
    <string name="send_cash">Send Cash</string>
    <string name="buy_data">Buy Data</string>
    <string name="pay_with_qr">Pay with QR Code</string>
    <string name="overview">Overview</string>
    <string name="history">History</string>
    <string name="fund_account">Fund account</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="more">more</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="dialog_title_auth">Authentication required</string>
    <string name="dialog_msg_auth"> </string>
    <string name="amount">Amount</string>
    <string name="request">Request</string>
    <string name="enter_amount_in_naira">Enter Amount in naira</string>
    <string name="benefactor_account_number">Benefactor Account Number</string>
    <string name="enter_benefactor_s_phone_number">Enter Benefactor\'s phone number</string>
</resources>
