<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/overview"
        android:enabled="true"
        android:icon="@drawable/kwuo"
        android:orderInCategory="20"
        android:title="@string/overview"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/history"
        android:icon="@drawable/history"
        android:orderInCategory="30"
        android:title="@string/history"
        app:showAsAction="always" />

    <item
        android:id="@+id/fund_account"
        android:icon="@drawable/vector_fund_account"
        android:orderInCategory="40"
        android:title="@string/fund_account"
        app:showAsAction="always" />

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:orderInCategory="10"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_baseline_home_24"
        android:orderInCategory="10"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/more"
        android:icon="@drawable/more_menu_icon"
        android:orderInCategory="50"
        app:showAsAction="always"
        android:title="@string/more">
        <menu>
            <group>
                <item
                    android:id="@+id/request_cash"
                    android:icon="@drawable/vector_request_cash"
                    android:title="@string/request_cas" />
                <item
                    android:id="@+id/send_cash"
                    android:icon="@drawable/vector_send_cash"
                    android:title="@string/send_cash" />
                <item
                    android:id="@+id/buy_airtime"
                    android:icon="@drawable/vector_buy_airtime"
                    android:title="@string/buy_airtime" />
                <item
                    android:id="@+id/buy_data"
                    android:icon="@drawable/vector_buy_data"
                    android:title="@string/buy_data" />
                <item
                    android:id="@+id/pay_with_qr"
                    android:icon="@drawable/ic_baseline_qr_code_24"
                    android:title="@string/pay_with_qr" />

            </group>
        </menu>
    </item>


</menu>