<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".activities.DashboardActivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_dashboard"
        app:menu="@menu/dashboard_menu" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/top_toolbar"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:background="#00C158"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/good_afternoon"
            android:layout_width="172dp"
            android:layout_height="21dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="24dp"
            android:gravity="top"
            android:text="@string/good_afternoon"
            android:textAppearance="@style/good_afternoon"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/top_toolbar"
            app:layout_constraintStart_toStartOf="@+id/top_toolbar"
            app:layout_constraintTop_toTopOf="@+id/top_toolbar" />

        <View
            android:id="@+id/rectangle_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rectangle_2"
            app:layout_constraintBottom_toBottomOf="@+id/top_toolbar"
            app:layout_constraintEnd_toEndOf="@+id/top_toolbar"
            app:layout_constraintStart_toStartOf="@+id/top_toolbar"
            app:layout_constraintTop_toBottomOf="@+id/good_afternoon" />


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/bottom_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00C158"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/wallet_balance"
            android:layout_width="106dp"
            android:layout_height="21dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="top"
            android:text="@string/wallet_bala"
            android:textAppearance="@style/wallet_bala"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/rectangle_2"
            app:layout_constraintTop_toTopOf="@+id/rectangle_2" />

        <TextView
            android:id="@+id/some_id"
            android:layout_width="72dp"
            android:layout_height="42dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:gravity="top"
            android:text="@string/some_id"
            android:textAppearance="@style/some_id"
            app:layout_constraintBottom_toBottomOf="@+id/rectangle_2"
            app:layout_constraintStart_toStartOf="@+id/rectangle_2"
            app:layout_constraintTop_toBottomOf="@+id/wallet_balance" />

        <Button
            android:id="@+id/fund_account"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ic_baseline_add_circle_outline_24"
            app:layout_constraintEnd_toEndOf="@+id/rectangle_2"
            app:layout_constraintTop_toTopOf="@+id/rectangle_2" />

        <TextView
            android:id="@+id/fund_wallet"
            android:layout_width="80dp"
            android:layout_height="21dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="top"
            android:text="@string/fund_wallet"
            android:textAppearance="@style/fund_wallet"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/rectangle_2"
            app:layout_constraintEnd_toEndOf="@+id/rectangle_2"
            app:layout_constraintTop_toBottomOf="@+id/fund_account" />

        <Button
            android:id="@+id/request_cash"
            android:layout_width="155dp"
            android:layout_height="82dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="42dp"
            android:background="#FFFFFF"
            android:drawableStart="@drawable/vector_request_cash"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:elevation="20dp"
            android:text="@string/request_cas"
            android:textSize="14sp"
            android:onClick="requestCash"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_toolbar" />

        <Button
            android:id="@+id/send_cash"
            android:layout_width="155dp"
            android:layout_height="82dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="42dp"
            android:background="#FFFFFF"
            android:drawableEnd="@drawable/vector_send_cash"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:elevation="20dp"
            android:text="@string/send_cash"
            android:onClick="sendCash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_toolbar" />

        <Button
            android:id="@+id/buy_airtime"
            android:layout_width="155dp"
            android:layout_height="82dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="#FFFFFF"
            android:drawableStart="@drawable/vector_buy_airtime"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:elevation="20dp"
            android:onClick="airtimePurchase"
            android:text="@string/buy_airtime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/request_cash"/>

        <Button
            android:id="@+id/buy_data"
            android:layout_width="155dp"
            android:layout_height="82dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:background="#FFFFFF"
            android:drawableEnd="@drawable/vector_buy_data"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:elevation="20dp"
            android:text="@string/buy_data"
            android:onClick="buyData"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/send_cash"/>

        <Button
            android:id="@+id/pay_with_qr"
            android:layout_width="340dp"
            android:layout_height="88dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/pay_button_vector"
            android:text="@string/pay_with_qr"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/bottom_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>